Oppdatert openapi specs
